# swagger-output.json
@@ -1321,9 +1321,6 @@
                 "group": {
                   "example": "any"
                 },
-                "lessonName": {
-                  "example": "any"
-                },
                 "lessonDateTime": {
                   "example": "any"
                 },
@@ -1372,9 +1369,6 @@
               "type": "object",
               "properties": {
                 "group": {
-                  "example": "any"
-                },
-                "lessonName": {
                   "example": "any"
                 },
                 "lessonDateTime": {
@@ -1507,10 +1501,10 @@
                 "groupId": {
                   "example": "any"
                 },
-                "subject": {
+                "grade": {
                   "example": "any"
                 },
-                "grade": {
+                "submissionId": {
                   "example": "any"
                 }
               }
@@ -1627,47 +1621,6 @@
         "responses": {
           "200": {
             "description": "OK"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    },
-    "/api/grades/homework": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "authorization",
-            "in": "header",
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "submissionId": {
-                  "example": "any"
-                },
-                "grade": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
           },
           "401": {
             "description": "Unauthorized"
